# MAGISystem2

./: .dockerignore  .env.local.observability.template  .env.local.template  .eslintrc.json  .gitignore  .prettierignore  API.ts  AUTHENTICATION_IMPLEMENTATION_PLAN.md  CONNECTIVITY_TROUBLESHOOTING.md  Dockerfile  INTEGRATION_CHECK.md  PHASE1_STATUS_REPORT.md  PR_TEMPLATE.md  PR_TEMPLATE_JA.md  QUICKSTART.md  README.md  REALTIME_IMPLEMENTATION_SUMMARY.md  STREAMING_ERROR_ANALYSIS.md  TIMEOUT_IMPLEMENTATION_ANALYSIS.md  amplify.yml  bedrock-models.json  debug-amplify.js  next.config.js  package-lock.json  package.json  queries.ts  subscriptions.ts  tailwind.config.ts  test-stream-api.json  test-stream.html  test_custom_prompts_structure.py  tsconfig.json  tsconfig.tsbuildinfo
.claude/: ARCHITECTURE_REVIEW_RESULTS.md
.kiro/hooks/: on-branch-ci.yaml  on-save-format-test.yaml  (+1 more)
agents/: .bedrock_agentcore.yaml  .env.template  CUSTOM_PROMPTS.md  DEBUG_GUIDE.md  Dockerfile  Dockerfile.agentcore  PHASE2_BASELINE_COMPLETE.md  README.md  agentcore_test.py  fix_json_parsing.py  lambda_handler.py  local_server.py  magi_agent.py  magi_agent_sequential.py  magi_strands_agents.py  pyproject.toml  requirements.txt  response.json  run_tests.py  simple_test.py  strands_exploration.py  test_data_flow.py  test_error_handling.py  test_local_server.py  test_magi_system.py  test_request.json  uv.toml
agents/archive/: README.md  bedrock_test.py
agents/archive/direct_bedrock_integration/: README.md  bedrock_agent.py
agents/backend/: .env.template  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
agents/backend/app/: layout.tsx
agents/backend/app/api/invocations/: route.ts
agents/backend/scripts/: test-local.ps1
agents/backend/src/app/: page.tsx
agents/backend/src/app/api/invocations/: route.ts
agents/backend/src/app/api/ping/: route.ts
agents/backend/src/app/invocations/: route.ts
agents/backend/src/lib/: python-bridge.ts
agents/backend/src/lib/config/: timeout.ts
agents/backend/src/types/: magi.ts
agents/balthasar/: __init__.py  agent.py
agents/caspar/: __init__.py  agent.py
agents/config/: timeout.py
agents/deploy/: magi_agent.py  requirements.txt
agents/deploy/shared/: prompts.py  utils.py
agents/melchior/: __init__.py  agent.py
agents/scripts/: demo.py  deploy_agentcore.py  setup_agentcore.py
agents/shared/: config.py  types.py
agents/solomon/: __init__.py  agent.py  tools.py
agents/tests/: README.md  run_test.bat  run_test.ps1  run_test.sh  test_agents.py  test_integration.py  test_magi.py  test_magi2.py  test_magi3.py  test_magi4.py  test_magi_parallel.py  test_parallel.py  test_ping.py  test_ping_example.ps1  test_ping_example.sh
agents/tests/streaming_output/: balthasar_stream.txt  caspar_stream.txt  full_stream.json  melchior_stream.txt  summary.txt
agents/tests/streaming_output_custom/: comparison.txt
agents/tests/streaming_output_parallel/: performance_comparison.txt  summary.txt
agents/tests/streaming_output_phase2/: summary.txt
agents/tests/streaming_output_v2/: balthasar_stream.txt  full_stream.json  melchior_stream.txt  summary.txt
amplify/: README.md  backend.ts  tsconfig.json
backend/: .gitignore  CHECK_BACKEND.md  Dockerfile  next.config.js  package-lock.json  tsconfig.json
docs/: AGENTCORE_RUNTIME_CONFIG.md  AMPLIFY_GEN2_ENUM_INVESTIGATION.md  AMPLIFY_GEN2_ENUM_SOLUTION.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_DECISION.md  AUTHENTICATION_IMPLEMENTATION_PLAN.md  BEDROCK_INTEGRATION_TODO.md  BRANCH_STATUS.md  CRITICAL_FIXES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FLOW.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  ENVIRONMENT_SETUP.md  IMPLEMENTATION_COMPARISON.md  JAVASCRIPT_SDK_IMPLEMENTATION.md  LAMBDA_STREAMING_SETUP.md  MODEL_SELECTION_FIX.md  MODEL_SELECTION_IMPLEMENTATION_COMPLETE.md  PHASE1_STATUS_REPORT.md  PRODUCTION_CHAT_IMPLEMENTATION.md  QIITA_APPROACH_ANALYSIS.md  QIITA_STREAMING_CHANGES.md  README.md  SECURITY_FIXES.md  STREAMING_BACKEND_SETUP.md  STREAMING_DATA_FLOW.md  STREAMING_IMPLEMENTATION.md  SYSTEM_DIAGNOSIS.md  TEST_ACCESS_GUIDE.md  TEST_STRUCTURE.md  TIMEOUT_ENVIRONMENT_CONFIGURATION.md  TIMEOUT_IMPLEMENTATION_ANALYSIS.md  UI_DESIGN_PROPOSAL.md  USERSETTINGS_ENABLEMENT_GUIDE.md  WHY_STREAMING_WORKS.md  agentcore-runtime-setup.md  bedrock-agent-ids-template.md  bedrock-agent-setup-guide.md  (+6 more)
frontend/: .gitignore  amplify.yml  amplify_outputs.json  instrumentation.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json
scripts/: check-amplify-setup.js  deploy-backend.sh  init-phase3.js  setup-amplify-environment.js  setup-env.js
src/: README.md  instrumentation.ts  middleware.ts
src/app/: layout.tsx  (+3 more)
streaming_output/: balthasar_stream.txt  caspar_stream.txt  full_stream.json  melchior_stream.txt  summary.txt
test/: README.md  lambda_test.py  quick_test.py
(+297 files in other folders)
